# context-capsule

./: .gitignore  LICENSE  PROJECT_PLAN.md  PROTOTYPE_PROGRESS.md  README.md  START_HERE_KO.md  context_capsule_cli.bat  pyproject.toml  requirements-dev.txt  requirements-local-llm.txt  requirements-rag.txt  requirements.txt  run_context_capsule.bat
app/: __init__.py  cli.py  main.py
docs/: README.md  architecture.md  beta_feedback_loop.md  commercialization_strategy.md  demo_capture_flow.md  experiment_why_context_capsule.md  feedback_template.md  future_direction.md  hybrid_retrieval.md  kdt_beta_quickstart.md  kdt_beta_test_plan.md  local_app.md  meeting_to_execution_pipeline.md  project_health_check.md  release_packaging.md  release_publish_checklist.md  request_understanding.md  target_positioning.md  tech_brief.md  v0.2_scrum_kickoff_modes.md  v1_roadmap.md  validation.md  vision.md  work_handoff_ownership.md  workflow_graph.md
examples/: rainbow_bridge_capsule.md
scripts/: build_release.ps1  capture_demo_screenshots.py  compare_raw_vs_capsule.py  context_capsule_cli.ps1  demo_scenario.py  demo_user_speech.py  evaluate_external_repo.py  generate_performance_report.py  install_windows.ps1  run_dashboard.ps1  validate_mvp.py  validate_user_speech.py
tests/: __init__.py  test_capsule_generator.py  test_capsule_service.py  test_chat_analyzer.py  test_cli.py  test_compare_raw_vs_capsule.py  test_context_sanitization.py  test_dashboard_ux_static.py  test_demo_scenario.py  test_demo_user_speech.py  test_docs_links.py  test_doctor_service.py  test_execution_packet_generator.py  test_external_repo_evaluation.py  test_external_repo_retrieval.py  test_fastapi_web_ui.py  test_feedback_service.py  test_feedback_template.py  test_guided_result.py  (+17 more)
(+110 files in other folders)
