[project]
name = "context-capsule"
version = "0.2.0"
description = "Human-in-the-loop handoff packet generator for AI coding tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
context-capsule = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]
ollama = [
    "ollama>=0.3.0",
]
llama-cpp = [
    "llama-cpp-python>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
